--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-Flask
-SQLAlchemy
+Flask~=1.1.2
+SQLAlchemy~=1.4.6
 flask_wtf
 flask-wtf
-wtforms
+wtforms~=2.3.3
+
+Werkzeug~=1.0.1
+PyMySQL~=1.0.2
